[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/playerCharacters/Fighter_male_lookingRight.png" type="Texture" id=1]
[ext_resource path="res://gamecode/scenes/GUI/playerGUI/EquipmentSlotDisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://gamecode/scenes/GUI/playerGUI/charEquipManager.gd" type="Script" id=3]

[node name="charEquipOverview" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.494118, 0.494118, 0.494118, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="charEquipManager" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playerIcon" type="TextureRect" parent="charEquipManager"]
margin_left = 492.0
margin_top = 272.0
margin_right = 531.0
margin_bottom = 327.0
texture = ExtResource( 1 )

[node name="equipmentSlots" type="Control" parent="charEquipManager"]
margin_left = 512.0
margin_top = 300.0
margin_right = 512.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="headSlot" parent="charEquipManager/equipmentSlots" instance=ExtResource( 2 )]
margin_left = -32.0
margin_top = -124.0
margin_right = 31.0001
margin_bottom = -64.0

[node name="rArmSlot" parent="charEquipManager/equipmentSlots" instance=ExtResource( 2 )]
margin_left = 64.0
margin_top = 4.0
margin_right = 127.0
margin_bottom = 64.0
equipSlot = 4

[node name="lArmSlot" parent="charEquipManager/equipmentSlots" instance=ExtResource( 2 )]
margin_left = 64.0
margin_top = -76.0
margin_right = 127.0
margin_bottom = -16.0
equipSlot = 3

[node name="feetSlot" parent="charEquipManager/equipmentSlots" instance=ExtResource( 2 )]
margin_left = -32.0
margin_top = 36.0
margin_right = 31.0
margin_bottom = 96.0
equipSlot = 2

[node name="chestSlot" parent="charEquipManager/equipmentSlots" instance=ExtResource( 2 )]
margin_left = -112.0
margin_top = -44.0
margin_right = -49.0
margin_bottom = 16.0
equipSlot = 1
